# aeonium-menu

./: Cargo.toml  Makefile  README.md
src/: config.rs  desktop_file.rs  draw_call.rs  gui_state.rs  input.rs  input_check.rs  lib.rs  libinput_events.rs  main.rs  ring_menu.rs  shortcut_parser.rs  svg_utils.rs  utils.rs
