[package]
name = "aeonium-menu"
version = "0.1.0"
edition = "2024"
default-run = "aeonium-menu"

[dependencies]
anyhow = "1.0.99"
directories = "6.0.0"
freedesktop-icons = "0.4.0"
freedesktop_entry_parser = "1.3.0"
input = "0.9.1"
libc = "0.2.175"
nix = { version = "0.29.0", features = ["poll"] }
num_enum = "0.7.4"
raylib = { version = "5.5.1", features = ["noscreenshot"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "aeonium-gui"
path = "src/bin/gui/main.rs"
